# Idio

./: .ccls  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  cmake.bat  launch.json
cmake/: resources.cmake  tools.cmake  warnings.cmake
idio/: CMakeLists.txt  idio.hpp  pch.hpp
idio/core/: app.cpp  app.hpp  event.hpp  events.cpp  linux.cpp  logger.cpp  logger.hpp  win32.cpp  window.cpp  window.hpp
idio/gfx/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  vkutl.hpp
src/idio/: .licenseheader  CMakeLists.txt  idio.hpp  pch.hpp
src/idio/core/: app.cpp  app.hpp  event.hpp  linux.cpp  types.hpp  win32.cpp  window.cpp  window.hpp
src/idio/gfx/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  vkutl.hpp
src/testapp/: CMakeLists.txt  main.cpp
src/testapp/shaders/: basic.frag  basic.vert
testapp/: CMakeLists.txt  main.cpp
testapp/shaders/: basic.frag  basic.vert
